Added pagination, analytics and so on